# astro-core

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md
app/: CMakeLists.txt  main.cpp
app/include/: SimpleModelLayer.hpp  helloTriangleLayer.hpp  simpleModelLayer.hpp
app/src/: SimpleModelLayer.cpp  helloTriangleLayer.cpp  main.cpp  simpleModelLayer.cpp
cmake/: FetchLinkGLFW.cmake  FetchLinkIMGUI.cmake  FindLinkVulkan.cmake
core/: CMakeLists.txt
core/CMake/: EnableVulkanModule.cmake  FetchLinkGLFW.cmake  FetchLinkGLM.cmake  FetchLinkIMGUI.cmake  FindAddDoxygen.cmake  FindLinkVulkan.cmake
core/app/: CMakeLists.txt  README.md
core/app/include/core/app/: App.hpp  Event.hpp  Layer.hpp  api.hpp
core/app/src/: App.cpp  api.cpp
core/cmake/: FetchLinkGLFW.cmake  FetchLinkGLM.cmake  FetchLinkIMGUI.cmake  FindAddDoxygen.cmake
core/common/: CMakeLists.txt
core/common/include/core/common/: RenderTypes.hpp
core/docs/: Doxyfile.in  Doxyfile_common
core/include/core/app/: App.hpp  Event.hpp  Layer.hpp  app.hpp  event.hpp  layer.hpp
core/include/core/rendering/: IRenderer.hpp  Model.hpp  Renderer.hpp  Vertex.hpp  api.hpp  model.hpp  vulkan.hpp
core/include/core/rendering/vulkan/: Context.hpp  MeshManager.hpp  OldContext.hpp.old  PipelineManager.hpp  Renderer.hpp  Swapchain.hpp  TextureManager.hpp  Vertex.hpp  context.hpp  header.hpp  vertex.hpp
core/include/core/utils/: FileUtils.hpp  ImageUtils.hpp  ModelUtils.hpp  fileUtils.hpp  file_utils.hpp  imageUtils.hpp  modelUtils.hpp
core/include/core/vulkan/: config.hpp  context.hpp  instance.hpp
core/include/core/window/: EventQueue.hpp  InputState.hpp  Window.hpp  eventQueue.hpp  glfwContext.hpp  input.hpp  inputState.hpp  window.hpp
core/rendering/: CMakeLists.txt
core/rendering/include/core/rendering/: IContext.hpp  IRenderer.hpp
core/rendering/include/core/rendering/vulkan/: Context.hpp  MeshManager.hpp  PipelineManager.hpp  Renderer.hpp  TextureManager.hpp  Vertex.hpp
core/rendering/src/vulkan/: Context.cpp  MeshManager.cpp  PipelineManager.cpp  Renderer.cpp  Swapchain.cpp  TextureManager.cpp  Vertex.hpp
core/src/app/: App.cpp  app.cpp
core/src/rendering/: Model.cpp
core/src/rendering/vulkan/: Context.cpp  MeshManager.cpp  OldContext.cpp.old  PipelineManager.cpp  Renderer.cpp  Swapchain.cpp  TextureManager.cpp  context.cpp  instance.cpp
core/src/utils/: FileUtils.cpp  ImageUtils.cpp  ModelUtils.cpp  fileUtils.cpp  file_utils.cpp  imageUtils.cpp  modelUtils.cpp
core/src/window/: GLFWContext.cpp  InputState.cpp  glfwContext.cpp  inputState.cpp  window.cpp
core/utils/: CMakeLists.txt
core/utils/include/core/utils/: FileUtils.hpp  ImageUtils.hpp  MeshUtils.hpp
core/utils/src/: FileUtils.cpp  ImageUtils.cpp  MeshUtils.cpp
core/window/: CMakeLists.txt
core/window/include/core/window/: Events.hpp  Input.hpp
core/window/src/: Window.cpp
scripts/: compile_shader.sh  install_dependencies_linux.sh
shaders/: shader.slang  slang.spv
